--- a/index.html
+++ b/index.html
@@ -1,41 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Document</title>
-    <style>
-    .faixa {
-        background-color: #3498db; 
-        width: 100%; 
-        height: 100px; 
-        text-align: center;
-        line-height: 100px; 
-        font-size: 20px;
-    }
-    </style>
-    <style>
-    body {
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    </style>
-    <style>
-    .bio {
-        max-width: 950px; 
-        margin: 0 auto;   
-        text-align: justify; 
-        font-size: 18px;
-    }
-    </style>
-    <style>
-    .destaque {
-            background-color: rgb(132, 126, 133); 
-            border-radius: 5px; 
-    }
-    </style>
 </head>
 <body>
     <div class="faixa">
