--- a/index.html
+++ b/index.html
@@ -41,5 +41,23 @@
 <span class="destaque">CSS</span>
 <span class="destaque">HTML</span>
 </p>
+<div class ="table">
+<table border="1">
+    <tr>
+        <td><img src="github.png" alt="Imagem 1" width="100" height="100"></td>
+        <td><img src="curriculo.png" alt="Imagem 2" width="100" height="100"></td>
+        <td><img src="portifolio.png" alt="Imagem 3" width="100" height="100"></td>
+    </tr>
+    <tr>
+        <td><a href="https://luizgustavo2105.github.io/curriculo/" target="_blank" rel="noopener noreferrer">Veja o projeto</a></td>
+        <td><a href="https://luizgustavo2105.github.io/portifolio/" target="_blank" rel="noopener noreferrer">Vejo o projeto</a></td>
+        <td><a href="https://github.com/LuizGustavo2105" target="_blank" rel="noopener noreferrer">Veja o projeto</a></td>
+    </tr>
+</table>
+
+<h3 style="display: flex; justify-content: center;">Entre em contato</h3>
+<img src="git.png" width="70" height="70" alt="github"> <span><a href="https://github.com/LuizGustavo2105">GitHub</a></span>
+</div> 
+
 </body>
 </html>
